# openclaw-label-gepa

./: .gitignore  README.md  V5_BENCHMARK_HANDOVER.md  pyproject.toml  v4-bench-test-handover.md
.fast-agent/: fast-agent.yaml
.fast-agent/agent-cards/: dev.md  gepa-helper.md  openclaw-classifier.md
.fast-agent/hooks/: ripgrep_readonly_guard.py
.fast-agent/model-overlays/: gemma-e4.yaml  llamacpp-gemma-4-e2b-it-gguf.yaml  qwen3-5-9b.yaml
datasets/openclaw-label-v7a/: README.md  publication-manifest.json
docs/: setup.md
eval/openclaw/: asi-pack-v4.md  output-v6b.schema.json  output.schema.json  task-template.md  topic-boundary-guidance.md
regimes/shared/: openclaw-gepa-reflector.md
regimes/v6h/: baseline-results.json  regime.yaml
regimes/v6o/: regime.yaml
regimes/v6p/: regime.yaml
regimes/v7a/: regime.yaml
regimes/v7b-generator-prompt-seed/: regime.yaml
regimes/v7c-custom-proposer/: regime.yaml
regimes/v7d-final/: regime.yaml
regimes/v7e-mutable-definitions/: regime.yaml
regimes/v7f-constrained-definitions/: regime.yaml
regimes/v7f-constrained-definitions-overlay/: regime.yaml
regimes/v7g-generator-mutate-all/: regime.yaml
regimes/v7h-clean-generator-mutate-all/: regime.yaml
regimes/v7i-guarded-generator-mutate-all/: regime.yaml
regimes/v7j-minimal-topics/: regime.yaml
regimes/v7k-clean-reflection-asi/: regime.yaml
regimes/v7l-pathological-simple-failed-issues/: output-labels-provider-compatible.schema.json  regime.yaml
regimes/v7m-pathological-simple-full-asi/: labels-only-v7m.md  pathological-simple-seed-v7m.md  reflection-asi-full-prompt-v7m.md  regime.yaml
regimes/v7n-effective-base-full-asi/: reflection-asi-effective-base-full-v7n.md  regime.yaml
regimes/v7o-effective-base-full-asi-mb3-clean/: regime.yaml
runs/openclaw-vanilla-f1-gepa/: easy-final-v2-instability-mining.json  easy-final-v2-instability-mining.md
scripts/: gepa-run.py  openclaw-benchmark.py  openclaw-build-splits.py  openclaw-compare-teacher-labels.py  openclaw-consensus-teacher-buckets.py  openclaw-easy-set-400.py  openclaw-easy-set-pilot-audit.py  openclaw-easy-set-pilot-split.py  openclaw-easy-set-pilot-stratify.py  openclaw-easy-set-stability.py  openclaw-fetch-new-easy-candidates.py  openclaw-gepa-run.py  openclaw-label-analysis.py  openclaw-label-rationales.py  openclaw-resplit-multilabel.py  openclaw-sync-topic-boundary-guidance.py  openclaw-topic-guidance.py  openclaw-v6-consensus.py  openclaw-v6-intake.py  openclaw-v6b-train-ledger.py  openclaw-vanilla-f1-gepa.py  publish-dataset.py  render-prompt.py  run-regime.py
src/gepa_talk_lab/: __init__.py  fast_agent.py  tracking.py
src/openclaw_gepa/: __init__.py  cli.py  evaluator.py  fast_agent_lm.py  openclaw_benchmark.py  openclaw_gepa_run.py
src/openclaw_label_gepa/: __init__.py  benchmark.py  cli.py  datasets.py  jsonl.py  label_order.py  outputs.py  regimes.py  runplan.py  scoring.py
tests/: test_benchmark.py  test_label_order.py  test_outputs.py  test_repo_hygiene.py  test_run_regime_cli.py  test_runner_trackio.py  test_runplan.py  test_scoring.py
tools/data-build/: README.md  build-consensus.py  build-feedback300.py  build-intake.py  openclaw-build-splits.py  openclaw-easy-set-stability.py  openclaw-v6-consensus.py  openclaw-v6-intake.py  openclaw-v6-slim-tiers.py  openclaw-v6b-train-ledger.py  openclaw-v6k-final-splits.py  openclaw-v6n-feedback300.py  openclaw-v6o-feedback300.py
(+1419 files in other folders)
