[project]
name = "openclaw-gepa"
version = "0.1.0"
description = "fast-agent + GEPA + Trackio optimization scaffold"
readme = "README.md"
requires-python = ">=3.13.5,<3.15"
dependencies = [
  "fast-agent-mcp[gepa]>=0.7.18",
  "gepa",
]

[project.scripts]
openclaw-benchmark = "openclaw_gepa.openclaw_benchmark:main"

[tool.uv]
package = true

[tool.uv.sources]
# fast-agent-mcp 0.7.18 was tagged but not published to PyPI.
# Keep the GEPA adapter + Trackio integration on the matching source refs.
fast-agent-mcp = { git = "https://github.com/evalstate/fast-agent.git", tag = "v0.7.18" }
gepa = { git = "https://github.com/evalstate/gepa.git", branch = "feat/trackio" }

[tool.ruff]
line-length = 120
src = ["src", "scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
