[project]
name = "openclaw-gepa"
version = "0.1.0"
description = "fast-agent + GEPA + Trackio optimization scaffold"
readme = "README.md"
requires-python = ">=3.13.5,<3.15"
dependencies = [
  "fast-agent-mcp[gepa]>=0.7.18",
  "gepa",
]

[project.scripts]
openclaw-benchmark = "openclaw_gepa.openclaw_benchmark:main"

[tool.uv]
package = true

[tool.uv.sources]
# Use the local fast-agent checkout so GEPA additions are editable.
fast-agent-mcp = { path = "/home/ssmith/source/fast-agent-pr", editable = true }
# Use the local GEPA checkout that has callback + Trackio support.
gepa = { path = "/home/ssmith/source/gepa", editable = true }

[tool.ruff]
line-length = 120
src = ["src", "scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
